yaml-examples/medusa/medusa-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: medusa
  namespace: default
  labels:
    app: medusa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medusa
  template:
    metadata:
      labels:
        app: medusa
    spec:
      containers:
      - name: medusa
        image: linuxserver/medusa
        imagePullPolicy: Always
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /tv
            name: tv
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: medusa
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
      - name: tv
        hostPath:
          path: /mnt/share/Television
