yaml-examples/medusa/medusa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medusa
  namespace: default
spec:
  selector:
    app: medusa
  ports:
  - port: 8081
    targetPort: 8081
